# kirito

./: .gitignore  HuginMakeSaccadeConfig.py  README.md  TODO.txt  automatic.py  automatic_global.py  automatic_with_opencv.py  automatic_with_opencv_global.py  change_filename.py  clean_reference_pto_file.py  clean_up.py  compiling_notes  convert_opencv_output.c  convert_output_for_hugin.c  feature_finder.cpp  filter_features_based_on_global_view.py  filter_features_based_on_locations.py  filter_features_based_on_locations_2.py  generate_hugin_input.py  get_camera_id.py  make_pto_file_camera_in_order.py  matching_visualizer.py  parse_opencv_output.py  parse_opencv_output_2.py  parse_output.txt  parse_output_for_hugin.py  parse_output_for_hugin_2.py  parsed_output_for_hugin.txt  reference.json  sample_output.txt  stitching.py  stitching_detailed.cpp  update_crop_factor.py  update_crop_factor_and_v.py  update_from_applications.py  update_pto_resolution.py
grab/: grab.py
grab_tools/: grab.py  test.py
hugin_api/: hugin_api.py
kgui/: kirito_gui.pro  kirito_gui.py  main.py  mainwindow.ui
kirito_gui/: kirito_gui.py  main.py  mainwindow.ui
non_hugin_based_stitching/: automatic_with_opencv.py  automatic_with_opencv_global.py  feature_finder.py  filter_features_based_on_locations.py  parse_opencv_output.py  parse_output_for_hugin.py  parse_output_for_hugin_2.py  stitching_detailed.cpp  test_hugin_and_non_hugin_feature_finding.py
non_hugin_based_stitching/helpers/: automatic_global.py  automatic_with_opencv.py  filter_features_based_on_global_view.py  generate_hugin_input.py  generate_hugin_input_2.py  kirito_gui.py  matching_visualizer.py  update_crop_factor.py
prealigned_models/camera4/: prealigned.pto
rendering/: Kirito_rendering.cpp  matching_visualizer.py
rendering/compile_config/: CMakeLists.txt  Makefile
rendering/compile_config/Kirito_rendering.dir/: CXX.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  flags.make  link.txt
tests/: test_feature_matchings.py
utils/: clean_up.py  utils.py
